--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --color-surface: #fff;
+    --color-background: #eee;
+    --color-border: #e0e0e0;
+    --color-text: #616161;
+    --color-accent: #ef5350;
+    --color-accent-hover: #ffcdd2;
+
+    --color-shadow: rgba(0, 0, 0, 0.1);
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('./assets/fonts/OpenSans-Regular.ttf');
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    margin: 0;
+    min-height: 100%;
+    font-size: 1.4rem;
+    font-family: 'Open Sans', sans-serif;
+}
