Created button component

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="actions">
                 <a href="#">Register</a>
-                <button (click)="login()">Login</button>
+                <ob-button (click)="login()" name="Login"></ob-button>
             </div>
         </div>
     </ob-block>
