created mockserver, added mock endpoints

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <ob-block>
+    <ob-block class="login-block">
         <div class="login-container">
             <div class="title">OfficeBooking</div>
             <div class="form-container">
