getting data about user from backend

--- a/frontend/src/modules/app/components/user-menu/user-menu.component.html
+++ b/frontend/src/modules/app/components/user-menu/user-menu.component.html
@@ -1,4 +1,4 @@
 <div class="grid">
     <div class="avatar"></div>
-    <div class="name">Leonid Verennikov</div>
+    <div class="name">{{ userName }}</div>
 </div>
