--- a/frontend/src/modules/app/components/header/header.component.html
+++ b/frontend/src/modules/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header">
     <ob-logo></ob-logo>
-    <ob-user-menu></ob-user-menu>
+    <ob-user-menu [userName]="userName$ | async"></ob-user-menu>
 </div>
