implemented list of rooms on home page created layout on home page

--- a/frontend/src/modules/app/components/home/home.component.html
+++ b/frontend/src/modules/app/components/home/home.component.html
@@ -1,1 +1,7 @@
-<ob-header></ob-header>
+<div class="grid">
+    <ob-header></ob-header>
+    <div class="content">
+        <ob-room-list-container></ob-room-list-container>
+        <ob-room-info></ob-room-info>
+    </div>
+</div>
