--- a/frontend/src/modules/app/components/header/header.component.css
+++ b/frontend/src/modules/app/components/header/header.component.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: auto 1fr;
     background-color: var(--color-surface);
-    box-shadow: 0 0.1rem 0.1rem var(--color-shadow);
+    border-bottom: 0.1rem solid var(--color-shadow);
     height: 4.8rem;
     padding: 0 3rem;
 }
