added room-info container

--- a/frontend/src/modules/app/components/home/home.component.html
+++ b/frontend/src/modules/app/components/home/home.component.html
@@ -2,6 +2,6 @@
     <ob-header></ob-header>
     <div class="content">
         <ob-room-list-container></ob-room-list-container>
-        <ob-room-info></ob-room-info>
+        <ob-room-info-container></ob-room-info-container>
     </div>
 </div>
