--- a/frontend/src/modules/app/components/room-list/room-list.component.css
+++ b/frontend/src/modules/app/components/room-list/room-list.component.css
@@ -9,6 +9,8 @@
     padding: 8px;
     align-items: center;
     transition: all 0.1s ease;
+    cursor: pointer;
+    user-select: none;
 }
 
 .item:hover {
