created iconsModule, added user icon, added user icon to user-menu

--- a/frontend/src/modules/app/components/user-menu/user-menu.component.css
+++ b/frontend/src/modules/app/components/user-menu/user-menu.component.css
@@ -15,8 +15,7 @@
 .avatar {
     width: 3.2rem;
     height: 3.2rem;
-    border-radius: 50%;
-    background-color: var(--color-accent);
+    color: var(--color-accent);
 }
 
 .name {
