created button to add a room, created place-icon component, created room-icon component

--- a/frontend/src/modules/app/components/home/home.component.html
+++ b/frontend/src/modules/app/components/home/home.component.html
@@ -1,7 +1,22 @@
 <div class="grid">
     <ob-header></ob-header>
-    <div class="content">
-        <ob-room-list-container></ob-room-list-container>
-        <ob-room-info-container></ob-room-info-container>
+    <div class="page-content">
+        <ob-block name="Rooms">
+            <div class="block-content">
+                <ob-room-list-container></ob-room-list-container>
+                <ob-button-plate
+                    label="Create room"
+                    description="Create new room"
+                >
+                    <ng-container icon>
+                        <ob-place-icon></ob-place-icon>
+                    </ng-container>
+                </ob-button-plate>
+            </div>
+        </ob-block>
+
+        <ob-block name="Rooms">
+            <ob-room-info-container></ob-room-info-container>
+        </ob-block>
     </div>
 </div>
