--- a/frontend/src/modules/app/components/home/home.component.css
+++ b/frontend/src/modules/app/components/home/home.component.css
@@ -5,10 +5,17 @@
     overflow: hidden;
 }
 
-.content {
+.page-content {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-gap: 2rem;
     padding: 2rem;
     overflow: auto;
+}
+
+.block-content {
+    display: grid;
+    grid-template-rows: 1fr auto;
+    height: 100%;
+    grid-gap: 2rem;
 }
