--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -8,7 +8,7 @@
     --color-accent-hover: rgba(98, 149, 221, 0.8);
     --color-accent-focus: #4487dd;
 
-    --color-disable: #ebebeb;
+    --color-disable: #999;
 
     --color-shadow: rgba(0, 0, 0, 0.1);
     --color-accent-shadow: rgba(98, 149, 221, 0.25);
