--- a/frontend/src/modules/basic-components/components/button/button.component.html
+++ b/frontend/src/modules/basic-components/components/button/button.component.html
@@ -1,3 +1,8 @@
-<button class="main" (click)="handleClick($event)" [disabled]="disabled">
+<button
+    [class.main]="!bordered"
+    [disabled]="disabled"
+    [class.bordered]="bordered"
+    (click)="handleClick($event)"
+>
     {{ name }}
 </button>
