--- a/frontend/src/modules/app/components/login/login.component.html
+++ b/frontend/src/modules/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <ob-block class="login-block">
+    <ob-block>
         <div class="login-container">
             <div class="title">OfficeBooking</div>
             <div class="form-container">
@@ -15,7 +15,7 @@
                 ></ob-input>
             </div>
             <div class="actions">
-                <a href="#">Register</a>
+                <a [routerLink]="'/registration'">Register</a>
                 <ob-button (click)="login()" name="Login"></ob-button>
             </div>
         </div>
