--- a/frontend/src/modules/app/components/room-info/room-info.component.html
+++ b/frontend/src/modules/app/components/room-info/room-info.component.html
@@ -2,7 +2,7 @@
     <div class="title">{{ room.name }}</div>
 
     <ob-section name="Metrics">
-        <div>Total places: {{ room.placesList.length }}</div>
+        <div>Total places: {{ room.places.length }}</div>
         <div>Used places at the moment: {{ usedPlaces }}</div>
         <div>Available places for booking: {{ availablePlacesForBooking }}</div>
     </ob-section>
