--- a/frontend/src/modules/app/components/room-info/room-info.component.html
+++ b/frontend/src/modules/app/components/room-info/room-info.component.html
@@ -10,4 +10,6 @@
     <ob-section name="Description">
         <div>{{ room.description }}</div>
     </ob-section>
+
+    <ob-button name="Remove" (click)="handleRemoveRoom()"></ob-button>
 </div>
