--- a/frontend/src/modules/authorization/components/login/login.component.html
+++ b/frontend/src/modules/authorization/components/login/login.component.html
@@ -15,8 +15,8 @@
                 ></ob-input>
             </div>
             <div class="actions">
-                <a [routerLink]="'/registration'">Register</a>
-                <ob-button (click)="login()" name="Login"></ob-button>
+                <a [routerLink]="'/authorization'">Register</a>
+                <ob-button (click)="handleClick()" name="Login"></ob-button>
             </div>
         </div>
     </ob-block>
