created layout component, added child routes, created room page, implemented place list on room page

--- a/frontend/src/modules/authorization/components/login/login.component.html
+++ b/frontend/src/modules/authorization/components/login/login.component.html
@@ -15,7 +15,7 @@
                 ></ob-input>
             </div>
             <div class="actions">
-                <a [routerLink]="'/authorization'">Register</a>
+                <a [routerLink]="'/registration'">Register</a>
                 <ob-button (click)="handleClick()" name="Login"></ob-button>
             </div>
         </div>
