--- a/frontend/src/modules/basic-components/components/list/list.component.html
+++ b/frontend/src/modules/basic-components/components/list/list.component.html
@@ -2,7 +2,7 @@
     <div
         class="item"
         *ngFor="let item of data"
-        [class.selected]="selectedValue && selectedValue.id === item.id"
+        [class.selected]="selectedValueId && selectedValueId === item.id"
         (click)="handleSelect(item)"
     >
         {{ item[bindField] }}
