--- a/frontend/src/modules/room-info/components/room-info/room-info.component.html
+++ b/frontend/src/modules/room-info/components/room-info/room-info.component.html
@@ -11,5 +11,8 @@
         <div>{{ room.description }}</div>
     </ob-section>
 
-    <ob-button name="Remove" (click)="handleRemoveRoom()"></ob-button>
+    <div class="actions">
+        <ob-button name="Remove" (click)="handleRemoveRoom()"></ob-button>
+        <ob-button name="Go to room" (click)="goToRoom()"></ob-button>
+    </div>
 </div>
