added ability to add new place, created "Add place" modal, created checkbox components, added exit icon

--- a/frontend/src/modules/app/components/home/home.component.html
+++ b/frontend/src/modules/app/components/home/home.component.html
@@ -8,7 +8,7 @@
                 (click)="handleCreateRoom()"
             >
                 <ng-container icon>
-                    <ob-place-icon></ob-place-icon>
+                    <ob-room-icon></ob-room-icon>
                 </ng-container>
             </ob-button-plate>
         </div>
