--- a/frontend/src/modules/app/components/room/room.component.css
+++ b/frontend/src/modules/app/components/room/room.component.css
@@ -4,3 +4,10 @@
     grid-gap: 2rem;
     height: 100%;
 }
+
+.block-content {
+    display: grid;
+    grid-template-rows: 1fr auto;
+    height: 100%;
+    grid-gap: 2rem;
+}
