added ability to display info about place

--- a/frontend/src/modules/app/components/room/room.component.html
+++ b/frontend/src/modules/app/components/room/room.component.html
@@ -25,5 +25,7 @@
         </div>
     </ob-block>
     <ob-block name="Room scheme"></ob-block>
-    <ob-block name="Place info"></ob-block>
+    <ob-block name="Place info">
+        <ob-place-info-container></ob-place-info-container>
+    </ob-block>
 </div>
