added ability to remove place, added mock for 'api/place/remove'

--- a/frontend/src/modules/place-info/components/place-info/place-info.component.html
+++ b/frontend/src/modules/place-info/components/place-info/place-info.component.html
@@ -17,4 +17,8 @@
     <ob-section name="Description">
         <div>{{ place.description }}</div>
     </ob-section>
+
+    <div class="actions">
+        <ob-button name="Remove" (click)="handleRemovePlace()"></ob-button>
+    </div>
 </div>
