implemented room-scheme chart

--- a/frontend/src/modules/place/components/place-layout/place-layout.component.css
+++ b/frontend/src/modules/place/components/place-layout/place-layout.component.css
@@ -11,3 +11,10 @@
     height: 100%;
     grid-gap: 2rem;
 }
+
+.chart {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    height: 100%;
+}
