--- a/frontend/src/modules/place/components/place-layout/place-layout.component.html
+++ b/frontend/src/modules/place/components/place-layout/place-layout.component.html
@@ -24,7 +24,11 @@
             </ob-button-plate>
         </div>
     </ob-block>
-    <ob-block name="Room scheme"></ob-block>
+    <ob-block name="Room scheme">
+        <div class="chart">
+            <ob-room-scheme-container></ob-room-scheme-container>
+        </div>
+    </ob-block>
     <ob-block name="Place info">
         <ob-place-info-container></ob-place-info-container>
     </ob-block>
