Added legend for room scheme chart, Fixed axis element size

--- a/frontend/src/modules/room-scheme/components/rs-cell/rs-cell.component.css
+++ b/frontend/src/modules/room-scheme/components/rs-cell/rs-cell.component.css
@@ -24,7 +24,6 @@
     fill: #ddd;
 }
 
-.cell:not(.used):hover,
-.cell:not(.disabled):hover {
+.available.hovering:hover {
     fill: var(--color-accent-hover);
 }
