--- a/frontend/src/modules/room-scheme/components/rs-layout/rs-layout.component.css
+++ b/frontend/src/modules/room-scheme/components/rs-layout/rs-layout.component.css
@@ -1,9 +1,10 @@
-.grid {
+.chart {
     display: grid;
     grid-column-gap: 1rem;
     grid-template-areas:
         'axis-y canvas'
-        '. axis-x';
+        '. axis-x'
+        'legend legend';
 }
 
 .canvas {
@@ -28,4 +29,9 @@
     display: grid;
     justify-content: center;
     align-content: center;
+}
+
+.grid {
+    display: grid;
+    grid-gap: 2rem;
 }
