--- a/frontend/src/modules/room-scheme/components/rs-layout/rs-layout.component.html
+++ b/frontend/src/modules/room-scheme/components/rs-layout/rs-layout.component.html
@@ -1,30 +1,36 @@
 <div class="grid">
-    <ob-rs-canvas
-        class="canvas"
-        [cells]="cells"
-        [height]="height"
-        [width]="width"
-        [nodeSize]="nodeSize"
-        [padding]="padding"
-    ></ob-rs-canvas>
-    <div class="axis-x">
-        <div
-            class="axis-item"
-            *ngFor="let item of axisX"
-            [style.height]="nodeSize"
-            [style.width]="nodeSize"
-        >
-            {{ item }}
+    <div class="chart">
+        <ob-rs-canvas
+            class="canvas"
+            [cells]="cells"
+            [height]="height"
+            [width]="width"
+            [nodeSize]="nodeSize"
+            [padding]="padding"
+        ></ob-rs-canvas>
+        <div class="axis-x">
+            <div
+                class="axis-item"
+                *ngFor="let item of axisX"
+                [style.height.px]="nodeSize"
+                [style.width.px]="nodeSize"
+            >
+                {{ item }}
+            </div>
+        </div>
+        <div class="axis-y">
+            <div
+                class="axis-item"
+                *ngFor="let item of axisY"
+                [style.height.px]="nodeSize"
+                [style.width.px]="nodeSize"
+            >
+                {{ item }}
+            </div>
         </div>
     </div>
-    <div class="axis-y">
-        <div
-            class="axis-item"
-            *ngFor="let item of axisY"
-            [style.height]="nodeSize"
-            [style.width]="nodeSize"
-        >
-            {{ item }}
-        </div>
+
+    <div class="legend">
+        <ob-rs-legend [nodeSize]="nodeSize" [padding]="padding"></ob-rs-legend>
     </div>
 </div>
