Added roomId parameter to save place on backend, Changed endpoint path for registration, Renamed field in enum from "LAN" to "Ethernet"

--- a/frontend/src/modules/place/components/add-place-modal-content/add-place-modal-content.component.html
+++ b/frontend/src/modules/place/components/add-place-modal-content/add-place-modal-content.component.html
@@ -19,8 +19,8 @@
                 (oncheck)="handleChangeEquipment($event, equipment.PHONE)"
             ></ob-checkbox>
             <ob-checkbox
-                [label]="equipment.LAN"
-                (oncheck)="handleChangeEquipment($event, equipment.LAN)"
+                [label]="equipment.ETHERNET"
+                (oncheck)="handleChangeEquipment($event, equipment.ETHERNET)"
             ></ob-checkbox>
         </div>
     </div>
