implemented business logic for update room

--- a/frontend/src/modules/room/components/room-info/room-info.component.html
+++ b/frontend/src/modules/room/components/room-info/room-info.component.html
@@ -12,6 +12,7 @@
     </ob-section>
 
     <div class="actions">
+        <ob-button name="Edit" (click)="editRoom()"></ob-button>
         <ob-button name="Remove" (click)="handleRemoveRoom()"></ob-button>
         <ob-button name="Go to room" (click)="goToRoom()"></ob-button>
     </div>
