implemented navigation on room-scheme

--- a/frontend/src/modules/room-scheme/components/rs-layout/rs-layout.component.html
+++ b/frontend/src/modules/room-scheme/components/rs-layout/rs-layout.component.html
@@ -7,6 +7,7 @@
             [width]="width"
             [nodeSize]="nodeSize"
             [padding]="padding"
+            (selectPlace)="handleSelectPlace($event)"
         ></ob-rs-canvas>
 
         <div class="axis-x axis-left">
