--- a/frontend/src/modules/room-scheme/components/rs-canvas/rs-canvas.component.html
+++ b/frontend/src/modules/room-scheme/components/rs-canvas/rs-canvas.component.html
@@ -5,5 +5,6 @@
         *ngFor="let cell of cells"
         [size]="nodeSize"
         [padding]="padding"
+        (select)="handleSelectPlace($event)"
     ></g>
 </svg>
