implemented list of booking places, added sorting to list component

--- a/frontend/src/modules/basic-components/components/list/list.component.html
+++ b/frontend/src/modules/basic-components/components/list/list.component.html
@@ -3,7 +3,11 @@
     <div class="list-container">
         <div
             class="item"
-            *ngFor="let item of (data | filter: bindField:searchValue)"
+            *ngFor="
+                let item of (data
+                    | filter: bindField:searchValue
+                    | sort: bindField)
+            "
             [class.selected]="selectedValueId && selectedValueId === item.id"
             (click)="handleSelect(item)"
         >
