--- a/frontend/src/modules/place/components/place-info/place-info.component.html
+++ b/frontend/src/modules/place/components/place-info/place-info.component.html
@@ -22,6 +22,7 @@
     </ob-section>
 
     <ob-pb-form-container></ob-pb-form-container>
+    <ob-pb-list-container></ob-pb-list-container>
 
     <div class="actions">
         <ob-button name="Edit" (click)="openEditPlaceModal()"></ob-button>
