--- a/frontend/src/modules/room-scheme/components/rs-legend/rs-legend.component.css
+++ b/frontend/src/modules/room-scheme/components/rs-legend/rs-legend.component.css
@@ -1,5 +1,7 @@
 .grid {
     display: grid;
-    grid-auto-flow: row;
+    grid-auto-flow: column;
+    grid-gap: 2rem;
     width: max-content;
+    margin: 0 auto;
 }
