--- a/frontend/src/modules/place-booking/components/pb-list/pb-list.component.html
+++ b/frontend/src/modules/place-booking/components/pb-list/pb-list.component.html
@@ -1,29 +1,50 @@
-<!--<div class="grid">-->
-<!--<div class="head item">-->
-<!--<div>From date</div>-->
-<!--<div>To date</div>-->
-<!--<div>Approved</div>-->
-<!--</div>-->
-<!--<div class="item" *ngFor="let booking of bookingList">-->
-<!--<div>{{ booking.fromDate | date: 'dd.MM.yyyy' }}</div>-->
-<!--<div>{{ booking.toDate | date: 'dd.MM.yyyy' }}</div>-->
-<!--<div>{{ booking.approved }}</div>-->
-<!--</div>-->
-<!--</div>-->
-
 <table class="table">
     <thead>
         <tr>
             <td>From date</td>
             <td>To date</td>
             <td>Approved</td>
+            <td>Actions</td>
         </tr>
     </thead>
-    <tbody>
+    <tbody *ngIf="bookingList.length">
         <tr *ngFor="let booking of bookingList">
             <td>{{ booking.fromDate | date: 'dd.MM.yyyy' }}</td>
             <td>{{ booking.toDate | date: 'dd.MM.yyyy' }}</td>
-            <td>{{ booking.approved }}</td>
+            <td>
+                <div class="content-center">
+                    <div class="icon-container accept" *ngIf="booking.approved">
+                        <ob-check-icon></ob-check-icon>
+                    </div>
+
+                    <div
+                        class="icon-container reject"
+                        *ngIf="!booking.approved"
+                    >
+                        <ob-remove-icon></ob-remove-icon>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="content-center">
+                    <ob-button
+                        name="Accept"
+                        *ngIf="!booking.approved"
+                        (click)="handleUpdateBooking(booking, true)"
+                    ></ob-button>
+                    <ob-button
+                        name="Reject"
+                        *ngIf="booking.approved"
+                        (click)="handleUpdateBooking(booking, false)"
+                    ></ob-button>
+                </div>
+            </td>
+        </tr>
+    </tbody>
+
+    <tbody *ngIf="!bookingList.length">
+        <tr>
+            <td colspan="4">List of booking is empty</td>
         </tr>
     </tbody>
 </table>
